# resync

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEGEN_ISSUE.md  DRAFT-PRINCIPALS.md  Dockerfile  HYDRATION-ERROR.md  PLAN-PPX-AST-BUILDER.md  PPX-AST-BUILDER-REFACTOR.md  README.md  REALTIME-WEBSOCKET-HANG-REPORT.md  REALTIME_QUERY_REFACTOR.md  REALTIME_SQL_POOL_DX_REPORT.md  REALTIME_WEBSOCKET_HANG_DX_REPORT.md  STORE_REFACTOR.md  UNIVERSAL-INTL.md  VIDEO_CHAT_DEMO.md  docker-compose.yml  dune  dune-project  executor.opam  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  restart_server.sh  resync.opam  run-linux-demos.sh
common/js/: Config.re
demos/ecommerce/: dune  package.json
demos/ecommerce/server/: docker-compose.yml  package.json
demos/ecommerce/server/sql/: inventory.sql  period.sql  premise.sql  triggers.sql
demos/ecommerce/server/src/: EntryServer.re  dune  server.ml
demos/ecommerce/server/src/Database/: Inventory.re  Premise.re
demos/ecommerce/shared/js/: Config.re  Constants.re  Model.re  PeriodList.re  dune
demos/ecommerce/shared/native/: RealtimeSchema.ml  dune
demos/ecommerce/tests/: dune
demos/ecommerce/tests/browser/: EcommerceBrowserTest.re  EcommerceTestServer.re  dune
demos/ecommerce/ui/: ROUTING-DRAFT.md  build.mjs  index.html  package.json
demos/ecommerce/ui/src/: App.re  Card.re  Cart.re  CartStore.re  CartStoreSchema.re  ClientOnly.re  ConfigDecoding.re  DateFormatter.re  Icon.re  Index.re  Input.re  InventoryItem.re  InventoryList.re  Landing.re  NumberFormatter.re  Pricing.re  RealtimeSubscription.re  ReservationTypeSelection.re  Routes.re  ServerOrClientRender.re  Store.re  StoreContext.re  StoreHydration.re  StoreSchema.re  UseMounted.re  dune  style.css
demos/llm-chat/: dune
demos/llm-chat/server/sql/: schema.sql  thread_views.sql
demos/llm-chat/server/src/: EntryServer.re  Llm_adapter.ml  dune  server.ml
demos/llm-chat/server/src/Database/: Chat.re
demos/llm-chat/shared/js/: Constants.re  Model.re  RealtimeSchema.ml  dune
demos/llm-chat/shared/native/: dune
demos/llm-chat/tests/: dune
demos/llm-chat/tests/browser/: LlmChatBrowserTest.re  LlmChatTestServer.re  dune
demos/llm-chat/tests/native/: dune  llm_chat_store_streaming_test.re
demos/llm-chat/ui/: package.json
demos/llm-chat/ui/src/: ChatPage.re  Index.re  LlmChatStore.re  RealtimeSubscription.re  Routes.re  dune  style.css
demos/todo/: README.md  dune  todo-app.opam
demos/todo-multiplayer/: dune
demos/todo-multiplayer/server/sql/: schema.sql
demos/todo-multiplayer/server/src/: EntryServer.re  dune  server.ml
demos/todo-multiplayer/server/src/Database/: Todo.re
demos/todo-multiplayer/server/test/: dune  server_http_test.ml  server_test_support.ml  test_framework.ml  todo_multiplayer_server_test.ml
demos/todo-multiplayer/shared/js/: Constants.re  Model.re  RealtimeSchema.ml  dune
demos/todo-multiplayer/shared/native/: RealtimeSchema.ml  dune
demos/todo-multiplayer/tests/browser/: TodoMultiplayerBrowserTest.re  TodoMultiplayerTestServer.re  dune
demos/todo-multiplayer/ui/: package.json
demos/todo-multiplayer/ui/src/: HomePage.re  Index.re  RealtimeSubscription.re  Routes.re  Sonner.re  TodoMutations.re  TodoStore.re  dune  style.css
demos/todo/server/src/: EntryServer.re  dune  server.ml
demos/todo/shared/js/: Config.re  dune
demos/todo/shared/native/: dune
demos/todo/tests/browser/: TodoBrowserTest.re  dune
demos/todo/ui/: build.mjs  package.json
demos/todo/ui/src/: HomePage.re  Index.re  Routes.re  StateContext.re  TodoStore.re  dune  style.css
demos/video-chat/: test_ws.js
demos/video-chat/server/src/: VideoChat_adapter.ml  dune  server.ml
demos/video-chat/shared/js/: Constants.re  Model.re  dune
demos/video-chat/shared/native/: dune
demos/video-chat/tests/browser/: MediaCaptureMock.re  VideoChatBrowserTest.re  VideoChatTestServer.re  dune
demos/video-chat/ui/: build.mjs  package.json
demos/video-chat/ui/src/: HomePage.re  Index.re  MediaCapture.re  MediaCaptureOverride.re  MediaTransport.re  RoomPage.re  Routes.re  VideoChatStore.re  dune  style.css
docker/postgres-init/: 10-ecommerce-init.sh
docs/: API_REFERENCE.md  AUDIT-NOTES.md  GETTING-STARTED.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  dream-router-store-setup.md  icu-datetimeformatter.md  icu-numberformatter.md  ocaml-icu4c.md  realtime-schema.generated-artifacts.md  realtime-schema.mutations.md  realtime-schema.queries.md  realtime-schema.sql-annotations.md  realtime.streaming-lifecycle.md  reason-realtime.dream-middleware.md  reason-realtime.pgnotify-adapter.md  reason-realtime.stream.md  store-consistency-model.md  testing.md  universal-reason-react.components.md  universal-reason-react.intl.md  universal-reason-react.lucide-icons.md  universal-reason-react.router.md  universal-reason-react.store.md
executor/sql/: triggers.sql
executor/src/: EntryServer.re  dune  server.ml
executor/src/Database/: Bus.re  Inventory.re  PgNotifier.re  Premise.re
scripts/: init-ecommerce-db.sh  init-llm-chat-db.sh  init-todo-mp-db.sh  opam-pin-from-dune-project.sh  run-framework-browser-tests.mjs  run_dune.py
ui/: build.mjs
ui/src/: App.re  Cart.re  Client.re  ClientSubscription.re  ConfigContext.re  DebugText.re  Document.re  Index.re  InventoryList.re  Landing.re  NumberFormatter.re  PremiseContainer.re  ReservationTypeSelection.re  Store.re  StoreContext.re  StoreHydration.re  WebSocket.re  dune
