; Root dune file for build orchestration

; === ECOMMERCE DEMO ===
(alias
 (name ecommerce-app)
 (deps
  (alias_rec demos/ecommerce/ui/app)))

(alias
 (name ecommerce-server)
 (deps
  (file demos/ecommerce/server/src/server.exe)))

; === TODO DEMO ===
(alias
 (name todo-app)
 (deps
  (alias_rec demos/todo/ui/app)))

(alias
 (name todo-server)
 (deps
  (file demos/todo/server/src/server.exe)))

; === CONVENIENCE ALIASES ===
(alias
 (name all-apps)
 (deps
  (alias ecommerce-app)
  (alias todo-app)))

(alias
 (name all-servers)
 (deps
  (alias ecommerce-server)
  (alias todo-server)))

; Default still points to ecommerce (backward compat)
(alias
 (name default)
 (deps
  (alias ecommerce-app)
  (alias ecommerce-server)))

(dirs packages demos)
