(melange.emit
 (package executor)
 (module_systems
  (es6 "re.js"))
 (target app)
 (preprocess
  (pps
   server-reason-react.ppx
   -melange
   server-reason-react.browser_ppx
   -js
   melange.ppx
   reason-react-ppx))
 (runtime_deps style.css)
 (libraries
  reason-react-day-picker
  common_js
  melange.belt
  melange-webapi
  reason-react
  melange.dom
  melange.js))

; Rule to generate build stamp when UI files change
(rule
 (targets .build_stamp)
 (deps
  (source_tree .)
  ../build.mjs)
 (action
  (with-stdout-to .build_stamp
   (system "date +%s"))))

; Rule that runs esbuild when stamp or dependencies change
(rule
 (alias app)
 (deps
  (package executor)
  (alias_rec melange)
  .build_stamp
  (:script ../build.mjs)
  (:entrypoints app/ui/src/Index.re.js)
  (:document app/ui/src/Document.re.js)
  (source_tree ../node_modules)
  (file ../package.json)
  (source_tree ../../_opam/lib/server-reason-react/esbuild-plugin))
 (action
  (run
   node
   %{script}
   %{entrypoints}
   %{document}
   --output=app/dist
   --extract=true
   --env=%{env:DEMO_ENV='production'})))

(include_subdirs qualified)
