(library
 (name common_js)
 (public_name resync.common_js)
 (modules Config Constants PeriodList)
 (wrapped false)
 (libraries
  melange-json
  universal_reason_react_store_js
  melange.js)
 (modes melange)
 (preprocess
  (pps
   server-reason-react.browser_ppx -js
   melange.ppx
   melange-json.ppx)))
