(library
 (name common_js)
 (public_name resync.common_js)
 (modules Model Constants PeriodList)
 (wrapped false)
 (libraries
   melange-json
   universal_reason_react_store_js
   universal_reason_react_intl_js
   melange.js)
 (modes melange)
 (preprocess
  (pps
   server-reason-react.browser_ppx -js
   melange.ppx
   melange-json.ppx)))
