(library
 (name common_native)
 (public_name resync.common_native)
 (modules Model Constants PeriodList)
 (wrapped false)
(libraries
   melange-json-native
   server-reason-react.js
   universal_reason_react_store_native
   resync.universal_reason_react_intl_native
   str)
 (preprocess
  (pps
   server-reason-react.browser_ppx
   server-reason-react.melange_ppx
   melange-json-native.ppx))
 (modes native))

(copy_files
 (files ../js/*.re))
