(melange.emit
 (package resync)
 (alias ecommerce-browser-tests)
 (module_systems (esm "mjs"))
 (target dist)
 (promote
  (until-clean)
  (into ./generated))
 (libraries
  melange.js
  playwright_js)
 (preprocess
  (pps
   server-reason-react.ppx
   -melange
   server-reason-react.browser_ppx
   -js
   melange.ppx)))

(rule
 (targets .build_stamp)
 (deps
  generated/EcommerceBrowserTest.mjs
  generated/EcommerceTestServer.mjs)
 (action
  (with-stdout-to
   .build_stamp
   (system "date +%s"))))
