(library
 (name ecommerce_browser_test)
 (modules EcommerceBrowserTest EcommerceTestServer)
 (wrapped false)
 (libraries melange.js playwright_js)
 (modes melange)
 (preprocess (pps server-reason-react.ppx -melange server-reason-react.browser_ppx -js melange.ppx)))

(melange.emit
 (target dist)
 (alias ecommerce-browser-tests)
 (modules ())
 (module_systems (esm "mjs"))
 (promote (until-clean) (into ./generated))
 (libraries ecommerce_browser_test))

(rule
 (targets .build_stamp)
 (deps
  generated/EcommerceBrowserTest.mjs
  generated/EcommerceTestServer.mjs)
 (action
  (with-stdout-to
   .build_stamp
   (system "date +%s"))))
