(melange.emit
 (package resync)
 (module_systems
  (esm "re.js"))
 (target app)
 (preprocess
  (pps
   server-reason-react.ppx
   -melange
   server-reason-react.browser_ppx
   -js
   melange.ppx
   melange-json.ppx
   reason-react-ppx))
 (runtime_deps style.css)
  (libraries
   reason-react-day-picker
    common_js
     universal_reason_react_components_js
     universal_reason_react_lucide_icons_js
     universal_reason_react_router_js
     universal_reason_react_store_js
     universal_reason_react_intl_js
    melange-json
    melange.belt
    melange-webapi
    reason-react
   melange.dom
   melange.js))

; Rule that runs esbuild and writes .build_stamp after successful completion.
; The stamp acts as a stable file that changes whenever client output is rebuilt.
; The server build depends on this stamp so cross-layer work can be triggered when
; browser-side changes are compiled.

(rule
 (targets .build_stamp Index.re.js Index.re.css)
 (deps
  (package resync)
  (alias_rec melange)
  (:script ../build.mjs)
  (:entrypoints app/demos/ecommerce/ui/src/Index.re.js)
  (source_tree ../../../../node_modules)
  (file ../package.json)
  (source_tree ../../../../_opam/lib/server-reason-react/esbuild-plugin)
  (universe))
 ; Always check if this rule needs to run
 (action
  (progn
(run
     node
     %{script}
     %{entrypoints}
     --output=app
     --extract=true
     --env=%{env:DEMO_ENV='production'})
    (with-stdout-to
     .build_stamp
     (system "date +%s")))))

; Alias for the app

(alias
 (name app)
 (deps .build_stamp Index.re.js Index.re.css))

(alias
 (name ecommerce-ui)
 (deps .build_stamp Index.re.js Index.re.css))

(include_subdirs qualified)
