(melange.emit
 (package resync)
 (alias todo-mp-browser-tests)
 (module_systems (esm "mjs"))
 (target dist)
 (promote
  (until-clean)
  (into ./generated))
 (libraries
  melange.js
  playwright_js)
 (preprocess
  (pps
   server-reason-react.ppx
   -melange
   server-reason-react.browser_ppx
   -js
   melange.ppx)))

(rule
 (targets .build_stamp)
 (deps
  generated/TodoMultiplayerBrowserTest.mjs
  generated/TodoMultiplayerTestServer.mjs)
 (action
  (with-stdout-to
   .build_stamp
   (system "date +%s"))))
