(library
 (name todo_mp_browser_test)
 (modules TodoMultiplayerBrowserTest TodoMultiplayerTestServer)
 (wrapped false)
 (libraries melange.js playwright_js)
 (modes melange)
 (preprocess (pps server-reason-react.ppx -melange server-reason-react.browser_ppx -js melange.ppx)))

(melange.emit
 (target dist)
 (alias todo-mp-browser-tests)
 (modules ())
 (module_systems (esm "mjs"))
 (promote (until-clean) (into ./generated))
 (libraries todo_mp_browser_test))

(rule
 (targets .build_stamp)
 (deps
  generated/TodoMultiplayerBrowserTest.mjs
  generated/TodoMultiplayerTestServer.mjs)
 (action
  (with-stdout-to
   .build_stamp
   (system "date +%s"))))
