(library
 (name todo_browser_test)
 (modules TodoBrowserTest)
 (wrapped false)
 (libraries melange.js playwright_js)
 (modes melange)
 (preprocess (pps server-reason-react.ppx -melange server-reason-react.browser_ppx -js melange.ppx)))

(melange.emit
 (target dist)
 (alias todo-browser-tests)
 (modules ())
 (module_systems (esm "mjs"))
 (promote (until-clean) (into ./generated))
 (libraries todo_browser_test))
