(melange.emit
 (package resync)
 (alias video-chat-browser-tests)
 (module_systems (esm "mjs"))
 (target dist)
 (promote
  (until-clean)
  (into ./generated))
 (libraries
  melange.js
  playwright_js)
 (preprocess
  (pps
   server-reason-react.ppx
   -melange
   server-reason-react.browser_ppx
   -js
   melange.ppx)))
