(library
 (name video_chat_browser_test)
 (modules MediaCaptureMock VideoChatBrowserTest VideoChatTestServer)
 (wrapped false)
 (libraries melange.js playwright_js)
 (modes melange)
 (preprocess (pps server-reason-react.ppx -melange server-reason-react.browser_ppx -js melange.ppx)))

(melange.emit
 (target dist)
 (alias video-chat-browser-tests)
 (modules ())
 (module_systems (esm "mjs"))
 (promote (until-clean) (into ./generated))
 (libraries video_chat_browser_test))
